plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5' apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'org.ddcn41'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        maven { url 'https://repo.springdoc.org/release' }
    }

}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    description = 'back-office for ticketing system'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.3"
        }
    }
    bootJar {
        enabled = false
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        //swagger
        implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0")
        implementation 'org.apache.commons:commons-lang3:3.18.0'

        //    JWT
        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.11.5'

        //redis
        implementation 'redis.clients:jedis:4.4.3'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

dependencies {

}


